# wgpu-app-sample

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  shader_3d_texture.wgsl
